# genai_loves_fstrings_english

./: .env.example  .gitignore  LICENSE  README.md  extractor.py  pyproject.toml  rag.py  smartllm.py
.devcontainer/: devcontainer.json
observability/: __init__.py  openai.py  patch.py
solved/extractor/: v1.py  v2.py  v3.py  v4.py  v5.py
solved/rag/: v1.py  v2.py
solved/smartllm/: v1.py  v2.py
